Switch tests to use `AutoConfigureTestRestTemplate` and update dependencies for improved test support and clarity