@@ -9,20 +9,23 @@ import com.desertskyrangers.flightdeck.util.Json;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.resttestclient.TestRestTemplate;
+import org.springframework.boot.resttestclient.autoconfigure.AutoConfigureTestRestTemplate;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.http.*;
 import org.springframework.security.authentication.TestingAuthenticationToken;
 import org.springframework.security.core.Authentication;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
 
 @SpringBootTest( webEnvironment = RANDOM_PORT )
+@AutoConfigureTestRestTemplate
 public class WebSecurityEnforcementTest {
 
 	private TestRestTemplate restTemplate;
@@ -38,7 +41,7 @@ public class WebSecurityEnforcementTest {
 	@BeforeEach
 	public void setUp() throws MalformedURLException {
 		restTemplate = new TestRestTemplate( "user", "password" );
-		url = new URL( "http://localhost:" + port + ApiPath.PROFILE );
+		url = URI.create( "http://localhost:" + port + ApiPath.PROFILE ).toURL();
 	}
 
 	@Test
